--- a/package.json
+++ b/package.json
@@ -19,10 +19,24 @@
     "eslint-config-next": "13.5.1",
     "next": "13.5.1",
     "next-pwa": "^5.6.0",
+    "perf_hooks": "^0.0.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "perf_hooks": false,
+    "stream": false,
+    "stream-browserify": false,
+    "constants": false,
+    "module": false,
+    "os": false,
+    "process": false,
+    "util": false,
+    "assert": false
   }
 }
